DevTools: Fix performance monitor CPU usage always zero.

BUG=847360

Change-Id: I8c61e146e979ec8be364c9b688256ecbbdd43efb
Reviewed-on: https://chromium-review.googlesource.com/1080173
Commit-Queue: Alexei Filippov <alph@chromium.org>
Reviewed-by: Pavel Feldman <pfeldman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563827}