third_party/WebKit/LayoutTests/inspector-protocol/performance/perf-metrics.js
@@ -7,6 +7,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
   await dumpMetrics();
   await dp.Performance.enable();
   await dumpMetrics();
+  const taskTime1 = (await retrieveMetrics()).get('TaskDuration');
+  const taskTime2 = (await retrieveMetrics()).get('TaskDuration');
+  if (taskTime1 >= taskTime2)
+    testRunner.log(`Error: Metric TaskDuration should be monotonically increasing: ${taskTime1} ${taskTime2}.`);
   await dp.Performance.disable();
   await dumpMetrics();
 
